--- a/devel/gdb/sim/Makefile
+++ b/devel/gdb/sim/Makefile
@@ -1,16 +1,16 @@
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = 
-host_alias = i386--freebsd
+host_alias = i386-unknown-freebsd
 host_cpu = i386
-host_vendor = 
+host_vendor = unknown
 host_os = freebsd
-host_canonical = i386--freebsd
-target_alias = i386--freebsd
+host_canonical = i386-unknown-freebsd
+target_alias = i386-unknown-freebsd
 target_cpu = i386
-target_vendor = 
+target_vendor = unknown
 target_os = freebsd
-target_canonical = i386--freebsd
+target_canonical = i386-unknown-freebsd
 #    Makefile template for Configure for the sim library.
 #    Copyright (C) 1993 Free Software Foundation, Inc.
 #    Written by Cygnus Support.
@@ -56,7 +56,7 @@ includedir = $(prefix)/include
 oldincludedir =
 docdir = doc
 
-SHELL = /bin/bash
+SHELL = /bin/sh
 
 INSTALL = $${srcroot}/../install.sh -c
 INSTALL_PROGRAM = $(INSTALL)
