--- a/devel/gdb/bfd/Makefile
+++ b/devel/gdb/bfd/Makefile
@@ -6,16 +6,16 @@ TDEFAULTS = -DDEFAULT_VECTOR=freebsd386_vec -DSELECT_VECS='&freebsd386_vec' -DSE
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = sysdep.h
-host_alias = i386--freebsd
+host_alias = i386-unknown-freebsd
 host_cpu = i386
-host_vendor = 
+host_vendor = unknown
 host_os = freebsd
-host_canonical = i386--freebsd
-target_alias = i386--freebsd
+host_canonical = i386-unknown-freebsd
+target_alias = i386-unknown-freebsd
 target_cpu = i386
-target_vendor = 
+target_vendor = unknown
 target_os = freebsd
-target_canonical = i386--freebsd
+target_canonical = i386-unknown-freebsd
 target_makefile_frag = ./config/i386-freebsd.mt
 host_makefile_frag = config/i386bsd.mh
 #    Makefile template for Configure for the BFD library.
@@ -62,7 +62,7 @@ includedir = $(prefix)/include
 oldincludedir =
 docdir = doc
 
-SHELL = /bin/bash
+SHELL = /bin/sh
 
 INSTALL = install -c
 INSTALL_PROGRAM = $(INSTALL)
