--- a/devel/gdb/gdb/doc/Makefile
+++ b/devel/gdb/gdb/doc/Makefile
@@ -1,16 +1,16 @@
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = 
-host_alias = i386--freebsd
+host_alias = i386-unknown-freebsd
 host_cpu = i386
-host_vendor = 
+host_vendor = unknown
 host_os = freebsd
-host_canonical = i386--freebsd
-target_alias = i386--freebsd
+host_canonical = i386-unknown-freebsd
+target_alias = i386-unknown-freebsd
 target_cpu = i386
-target_vendor = 
+target_vendor = unknown
 target_os = freebsd
-target_canonical = i386--freebsd
+target_canonical = i386-unknown-freebsd
 ##Copyright (C) 1991, 1992 Free Software Foundation, Inc.
 
 # Makefile for GDB documentation.
@@ -36,7 +36,7 @@ prefix = /usr/gnu
 
 infodir = $(prefix)/info
 
-SHELL = /bin/bash
+SHELL = /bin/sh
 
 INSTALL = install -c
 INSTALL_PROGRAM = $(INSTALL)
