add xpm and fvwm to Makefile Important: fvwm depends on xpm (documented in Makefile)

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -18,6 +18,8 @@ SUBDIR += xlock
 SUBDIR += xv
 SUBDIR += ezd
 SUBDIR += xview
+SUBDIR += xpm
+SUBDIR += fvwm # depends on xpm
 
 .if !defined(AVOID)
 SUBDIR += xxgdb
