--- a/x11/xlock/Makefile
+++ b/x11/xlock/Makefile
@@ -324,7 +324,7 @@ install:: xlock
 
 package:	pkg_bin
 
-pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+pkg_bin: install install.man pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xlock_bin
 
 # -------------------------------------------------------------------------
