Eliminated need for having . in path.

--- a/x11/urt/tools/clock/makefile.src
+++ b/x11/urt/tools/clock/makefile.src
@@ -10,7 +10,7 @@ rleClock:rleClock.o font.o
 
 font.c:font.src makeFont
 	chmod +x makeFont
-	makeFont font.src > font.c
+	./makeFont font.src > font.c
 
 lint:
 	lint -I$(RI) rleClock.c
