1. Let dfree() use statfs() instead of trying to read the superblock 2. Replace __386BSD__ with __FreeBSD__ and remove unnecessary instances    due to BSD_43 already being used instead of BSD_42 3. Install to /usr/libexec/nntpd as per inetd.conf 4. News user is news, not root 5. Pointed the documentation to the right pathnames 6. Pack dbz/dbz.o in libcnews.a before linking 7. Link with libcrypt

--- a/news/nntp/dbz/Makefile
+++ b/news/nntp/dbz/Makefile
@@ -37,7 +37,7 @@ newsinstall:
 
 u:	dbz.o
 	ar ruv ../libcnews.a dbz.o
-	cmp dbz.h ../h/dbz.h
+#	cmp dbz.h ../h/dbz.h
 
 t:	tdbz fake
 
@@ -165,5 +165,5 @@ rclean:
 	test ! -d xx || rmdir xx
 
 clean:	rclean
-	rm -f *.o dbz [a-z]dbz [a-z][a-z]dbz junk* PostScript.out
+	rm -f *.o dbz ../libcnews.a [a-z]dbz [a-z][a-z]dbz junk* PostScript.out
 	rm -f hist* dbase* *.bak mon.out gmon.out core dbm.h
