* MakeTeXTFM now works with TeX and METAFONT         * TeX and METAFONT are configured to call MakeTeXTFM 	  on the fly         * ourpaths.c: call kpse_path_search (path, name, 1)         * added install_sauter default to web2c/Makefile.in

--- a/print/texk/web2c-6.1/web2c/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/Makefile.in
@@ -51,6 +51,11 @@ mfpooldir = $(texpooldir)
 # this directory, named for the typeface families of these directories.
 psfontdir = $(fontdir)/adobe
 
+# If you don't want latex.fmt to preload John Sauter's true-size fonts,
+# then set install_sauter=false.  See the file `$(fontdir)/sauter/README'
+# for details.
+install_sauter = true
+
 # Where the configuration files get installed.
 dvips_prefix = $(texmf_prefix)/dvips
 configdir = $(dvips_prefix)
@@ -96,7 +101,7 @@ localmodes = modes
 
 
 # Compilation options.
-DEFS = $(XDEFS)
+DEFS = $(XDEFS) -DMAKE_TEX_MF_BY_DEFAULT=1 -DMAKE_TEX_TFM_BY_DEFAULT=1
 
 # CFLAGS is used for both compilation and linking.
 CFLAGS = -g $(XCFLAGS)
@@ -167,6 +172,7 @@ makeargs=$(MFLAGS) SHELL='$(SHELL)' CC='$(CC)' CFLAGS='$(CFLAGS)'	\
   prefix=$(prefix) exec_prefix=$(exec_prefix)				\
   bindir=$(bindir) scriptdir=$(scriptdir)				\
   mtt_destdir=$(mtt_destdir)						\
+  install_sauter=$(install_sauter)					\
   RANLIB='$(RANLIB)' LN='$(LN)' DEFS='$(DEFS)'                          \
   CCLD='$(CCLD)' LDFLAGS='$(LDFLAGS)' LIBS='$(LIBS)' 			\
   x_extra_libs='$(x_extra_libs)' x_include_flags='$(x_include_flags)'	\
