--- a/print/texk/web2c-6.1/web2c/lib/MakeTeXTFM.in
+++ b/print/texk/web2c-6.1/web2c/lib/MakeTeXTFM.in
@@ -19,17 +19,8 @@
 # TEMPDIR needs to be unique for each process because of the possibility
 # of simultaneous processes running this script.
 TEMPDIR=${TMPDIR-/tmp}/mttfm.$$
-NAME=$1
+NAME=`basename "$1" .tfm`
 MODE=${2-@default_mfmode@}
-
-if test -n "$3"; then
-  case "$3" in
-    /*) DESTDIR="$3";;
-     *) DESTDIR="$DESTDIR/$3";;
-  esac
-else
-  DESTDIR=$DESTDIR/$MODE
-fi
 
 TFMNAME=$NAME.'tfm'
 
@@ -88,3 +79,7 @@ mv $TFMNAME $DESTDIR/tfmtmp.$$ \
 
 cd $DESTDIR || exit 1
 mv tfmtmp.$$ $TFMNAME
+
+# If this line (or an equivalent) is not present, TeX
+# will think MakeTeXTFM failed.  Any other output to stdout will also.
+echo $DESTDIR/$TFMNAME
