--- a/print/texk/web2c-6.1/web2c/tex/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/tex/Makefile.in
@@ -37,7 +37,7 @@ program = initex virtex patgen
 # The -DTeX here is used for patgen, too, but that doesn't hurt anything.
 CC = @CC@
 CFLAGS = -g
-CPPFLAGS = -DTeX -I$(srcdir)/../lib -I../..
+CPPFLAGS = $(DEFS) -DTeX -I$(srcdir)/../lib -I../..
 
 CCLD = $(CC)
 LDFLAGS = $(CFLAGS) $(XLDFLAGS)
