--- a/print/texk/web2c-6.1/web2c/mf/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/mf/Makefile.in
@@ -36,7 +36,7 @@ program = inimf virmf
 
 CC = @CC@
 CFLAGS = -g
-CPPFLAGS = -DMF -I$(srcdir)/../lib -I../..
+CPPFLAGS = $(DEFS) -DMF -I$(srcdir)/../lib -I../..
 
 CCLD = $(CC)
 RANLIB = @RANLIB@
