dded sauterdir default

--- a/print/texk/web2c-6.1/web2c/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/Makefile.in
@@ -79,6 +79,9 @@ default_texsizes = @default_texsizes@
 mtp_destdir = $(fontdir)/tmp/pk
 mtt_destdir = $(fontdir)/tmp/tfm
 
+# Location of Sauter sources
+sauterdir = $(fontdir)/sauter
+
 # End of installation directory definitions.
 
 # These lines define the format and base files that `make fmts' and
