export default sauterdir

--- a/print/texk/web2c-6.1/web2c/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/Makefile.in
@@ -176,6 +176,7 @@ makeargs=$(MFLAGS) SHELL='$(SHELL)' CC='$(CC)' CFLAGS='$(CFLAGS)'	\
   bindir=$(bindir) scriptdir=$(scriptdir)				\
   mtt_destdir=$(mtt_destdir)						\
   install_sauter=$(install_sauter)					\
+  sauterdir=$(sauterdir)						\
   RANLIB='$(RANLIB)' LN='$(LN)' DEFS='$(DEFS)'                          \
   CCLD='$(CCLD)' LDFLAGS='$(LDFLAGS)' LIBS='$(LIBS)' 			\
   x_extra_libs='$(x_extra_libs)' x_include_flags='$(x_include_flags)'	\
