--- a/print/texk/web2c-6.1/web2c/lib/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/lib/Makefile.in
@@ -68,7 +68,7 @@ MakeTeXTFM: $(srcdir)/MakeTeXTFM.in
 install install-exec install-data:
 uninstall: uninstall-exec uninstall-data
 
-install-exec:
+install-exec: all
 	$(INSTALL_PROGRAM) MakeTeXTFM $(scriptdir)/MakeTeXTFM
 
 uninstall-exec:
