Added `lib' to progdirs variable so that MakeTeXTFM gets installed.

--- a/print/texk/web2c-6.1/web2c/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/Makefile.in
@@ -166,7 +166,7 @@ default: programs
 # Where we need to make things.
 # 
 triptrapdirs = dviutil fontutil
-progdirs = $(triptrapdirs) tex mf bibtex web
+progdirs = $(triptrapdirs) lib tex mf bibtex web
 alldirs = $(progdirs) lib man web2c
 
 # What to pass to subdirectories when making various things.
