Added some defaults to preserve modularity; MakeTeXTFM now uses the correct destination directory

--- a/print/texk/web2c-6.1/web2c/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/Makefile.in
@@ -82,6 +82,10 @@ mtt_destdir = $(fontdir)/tmp/tfm
 # Location of Sauter sources
 sauterdir = $(fontdir)/sauter
 
+# Default MetaFont mode.  See the file `./texmf/mf/modes.mf' for a full list 
+# of available modes.
+default_mfmode = CanonCX
+
 # End of installation directory definitions.
 
 # These lines define the format and base files that `make fmts' and
@@ -174,9 +178,11 @@ alldirs = $(progdirs) lib man web2c
 makeargs=$(MFLAGS) SHELL='$(SHELL)' CC='$(CC)' CFLAGS='$(CFLAGS)'	\
   prefix=$(prefix) exec_prefix=$(exec_prefix)				\
   bindir=$(bindir) scriptdir=$(scriptdir)				\
+  fontdir=$(fontdir)							\
   mtt_destdir=$(mtt_destdir)						\
   install_sauter=$(install_sauter)					\
   sauterdir=$(sauterdir)						\
+  default_mfmode=$(default_mfmode)					\
   RANLIB='$(RANLIB)' LN='$(LN)' DEFS='$(DEFS)'                          \
   CCLD='$(CCLD)' LDFLAGS='$(LDFLAGS)' LIBS='$(LIBS)' 			\
   x_extra_libs='$(x_extra_libs)' x_include_flags='$(x_include_flags)'	\
@@ -185,8 +191,6 @@ web2cmakeargs=$(makeargs) YACC='$(YACC)' LEX='$(LEX)' LEXLIB='$(LEXLIB)'
 installargs=$(makeargs) 						\
   INSTALL_DATA='$(INSTALL_DATA)'					\
   INSTALL_PROGRAM='$(INSTALL_PROGRAM)'					\
-  bindir=$(bindir)							\
-  fontdir=$(fontdir)							\
   texpooldir=$(texpooldir)						\
   mfpooldir=$(mfpooldir)
 
