--- a/print/texk/web2c-6.1/web2c/lib/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/lib/Makefile.in
@@ -59,7 +59,7 @@ Makefile: Makefile.in ../config.status
 
 MakeTeXTFM: $(srcdir)/MakeTeXTFM.in
 	rm -f MakeTeXTFM
-	sed -e 's,@mtt_destdir@,$(mtp_destdir),' \
+	sed -e 's,@mtt_destdir@,$(mtt_destdir),' \
 	    -e 's,@sauterdir@,$(sauterdir),' \
 	    -e 's,@default_mfmode@,$(default_mfmode),' \
 	  $(srcdir)/MakeTeXTFM.in >MakeTeXTFM
