Whoops - forgot that it's `package' now, not `pkg'.

--- a/lang/logo/Makefile
+++ b/lang/logo/Makefile
@@ -40,7 +40,7 @@ logolib:
 	chmod +x makelib
 	./makelib
 
-pkg:	install pkg/+PLIST pkg/+DESC pkg/+ONELINE
+package:	install pkg/+PLIST pkg/+DESC pkg/+ONELINE
 	pkg_create -f pkg/+PLIST -d pkg/+DESC -c pkg/+ONELINE logo_bin
 
 install: logo
