--- a/print/texk/web2c-6.1/Makefile.in
+++ b/print/texk/web2c-6.1/Makefile.in
@@ -163,7 +163,7 @@ uninstall uninstall-exec uninstall-data:
 	  if test -d $$d; then (cd $$d; $(MAKE) $(makeargs) $@); \
 	  else true; fi; done
 	ls -R $(texmf_prefix) >$(db_dir)/$(db_name)
-	@if [ -f /etc/crontab ]; then \
+	-if [ -f /etc/crontab ]; then \
 		if grep -q '$(db_dir)/$(db_name)' /etc/crontab; then :; \
 		else \
 			echo "Adding $(db_name) update to /etc/crontab"; \
